updated host app

--- a/src/main/default/lwc/gameApp/gameApp.html
+++ b/src/main/default/lwc/gameApp/gameApp.html
@@ -18,6 +18,11 @@
                         label="Reset"
                         onclick={handleResetClick}
                     ></lightning-button>
+                    <!-- Save Scores button -->
+                    <!--<lightning-button
+                        label="Save Scores"
+                        onclick={handleSaveScoresClick}
+                    ></lightning-button>-->
                 </div>
                 <div
                     class="slds-col slds-size_8-of-12 slds-align-middle header-title"
